# sms

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  asmsplit.py  bulk_demangle.sh  calcprogress.py  configure.py  diff_settings.py  doldisasm.py  extract_symbols.sh  first-diff.py  ldscript.lcf  ldscript.ld  macros.inc  obj_files.mk  sms_jp_r0.sha1
.github/workflows/: build.yml  lint.yml
asm/: bss.s  ctors.s  data.s  dtors.s  extab.s  extabindex.s  init.s  main.s  rodata.s  sbss.s  sbss2.s  sdata.s  sdata2.s
asm/Animal/: AnimalBase.s  AnimalManager.s  AnimalNerve.s  AnimalSave.s  BeeHive.s  Bird.s  Butterfly.s  boid.s  fishoid.s
asm/Camera/: CamShakeDefine.s  CameraBGCheck.s  CameraBck.s  CameraChange.s  CameraCodeControl.s  CameraDemo.s  CameraHeightPan.s  CameraInbetween.s  CameraJetCoaster.s  CameraKindParam.s  CameraMapTool.s  CameraMarioData.s  CameraMode.s  CameraMultiPlayer.s  (+16 more)
docs/: AGENT_MATCHING_TIPS.md  Building.md  PROGRAM_STRUCTURE_REVVING.md
include/: dolphin.h  fake_tgmath.h  functions.h  gpMarDirector.hpp  macros.h  macros.inc  types.h  unsorted_types.h  unsorted_variables.h  variables.h
mods/cape-powerup/: CMakeLists.txt
mods/cape-powerup/include/: cape_data.hxx
mods/cape-powerup/src/: main.cpp
sha1/: sms.jp.r0.sha1
src/: main.cpp
tools/: blue_coin_tracker.txt  calcprogress.py  check-changed-symbol-order.py  decomp-diff.py  deincbin.py  dive_slope_speed_fix.txt  hello_debug.txt  map_offsets.py  offset_mapping_results.txt  postprocess.py  project.py  sm64_physics_gecko.txt  validate-symbol-order.py
(+2308 files in other folders)
